[gd_scene load_steps=14 format=3 uid="uid://bnpldv7jlusky"]

[ext_resource type="Script" path="res://Scripts/sugar.gd" id="1_byqtv"]
[ext_resource type="Shader" uid="uid://dn1utvio5v5wd" path="res://assets/shaders/hit_flash.res" id="2_2marv"]
[ext_resource type="AudioStream" uid="uid://bhu8x4yvhuya4" path="res://assets/sounds and music/sfx/sugar hurt/ough-47202.mp3" id="2_yigvu"]
[ext_resource type="PackedScene" uid="uid://b1j1wqgrvlfm5" path="res://Scenes/hurt_box.tscn" id="4_pkj3f"]
[ext_resource type="Texture2D" uid="uid://0i8vxhvqtomt" path="res://assets/sugar/sugar1.png" id="4_ybqvg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b44fc"]
size = Vector2(129.5, 125)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6mqw1"]
resource_local_to_scene = true
shader = ExtResource("2_2marv")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 0.254902, 0.219608, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_skidl"]
load_path = "res://.godot/imported/sugar1.png-e5c7673812a3d35f41f72f52e08cf29c.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0qhry"]
load_path = "res://.godot/imported/sugar1.png-e5c7673812a3d35f41f72f52e08cf29c.ctex"

[sub_resource type="Animation" id="Animation_4fseh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BigSugar:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_012km"]
resource_name = "hit_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BigSugar:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vs43u"]
_data = {
"RESET": SubResource("Animation_4fseh"),
"hit_flash": SubResource("Animation_012km")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wlp6"]
size = Vector2(131, 124)

[node name="sugar" type="StaticBody2D" groups=["sugar_group"]]
script = ExtResource("1_byqtv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-1.25, 0)
shape = SubResource("RectangleShape2D_b44fc")
debug_color = Color(0, 0.6, 0.701961, 0.419608)
metadata/_edit_lock_ = true

[node name="hurt_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_yigvu")
volume_db = -15.0
pitch_scale = 2.5

[node name="BigSugar" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6mqw1")
position = Vector2(-24, -4)
scale = Vector2(0.17, 0.19)
texture = ExtResource("4_ybqvg")

[node name="MediumSugar" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6mqw1")
position = Vector2(33, 12)
scale = Vector2(0.12, 0.134)
texture = SubResource("CompressedTexture2D_skidl")
flip_h = true

[node name="SmallSugar" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6mqw1")
position = Vector2(-3, 42)
scale = Vector2(0.07, 0.078)
texture = SubResource("CompressedTexture2D_0qhry")
flip_h = true

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vs43u")
}

[node name="HurtBox" parent="." instance=ExtResource("4_pkj3f")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-1.5, 1)
shape = SubResource("RectangleShape2D_1wlp6")
metadata/_edit_lock_ = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
